--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       Lunasa is said to be more mature and calm, although she is a little more pessimistic. It is said that is due to the fact that she is really honest and she was tricked in the past. She is a really reserved person, so she is quiet and melancholic.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-2">BILIBILI</a>
+                      <a href="https://www.bilibili.com/video/BV1r34y1c7UU" class="btn-2">BILIBILI</a>
                     </div>
                   </div>
                 </div>
@@ -244,7 +244,7 @@
               <p>
                 LUNASA PRISMRIVER
               </p>
-              <a href="">
+              <a href="https://www.bilibili.com/video/BV1r34y1c7UU">
                 Lunasa
               </a>
             </div>
